--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
+    "luxon": "^3.4.4",
     "prisma": "^5.8.1",
     "prisma-error-enum": "^0.1.3",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +46,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.3.1",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
