Added static file server and admins log function: getAllAdminsLog

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+DEV_API_HOSTNAME=http://localhost:5000
+PROD_API_HOSTNAME=http://localhost:5000
+
 DEV_CLIENT_HOSTNAME=http://localhost:3000
 PROD_CLIENT_HOSTNAME=https://cliemb.com
 
