--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/serve-static": "^4.0.1",
     "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.8.1",
     "argon2": "^0.31.2",
@@ -47,6 +48,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/luxon": "^3.4.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
