--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.8.1",
     "argon2": "^0.31.2",
+    "axios": "^1.6.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
