--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "export NODE_ENV=development && nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "export NODE_ENV=production && pm2 start dist/main -i max",
+    "start:prod": "export NODE_ENV=production && pm2 start dist/main.js -i max",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
