--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DEV_API_HOSTNAME=http://localhost:5000
-PROD_API_HOSTNAME=http://localhost:5000
+PROD_API_HOSTNAME=https://cliemb.online/api
 
 DEV_CLIENT_HOSTNAME=http://localhost:3000
-PROD_CLIENT_HOSTNAME=https://cliemb.com
+PROD_CLIENT_HOSTNAME=https://cliemb.online
 
 REST_API_PORT=5000
 WS_API_PORT=5001
